Some fixes +readme upd

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,8 @@
-DB_NAME =
-DB_PASS =
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=
+POSTGRES_PORT=
 
 SECRET_KEY =
 
@@ -11,4 +14,5 @@ EMAIL =
 
 EMAIL_PASS =
 
-REDIS_BACKEND =
+REDIS_HOST=
+REDIS_PORT=
