--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,17 +7,19 @@ services:
       - '6379:6379'
 
   db:
-    image: 'postgres'
+    image: postgres:14.7-alpine
+    env_file:
+      - .env
     environment:
-      - POSTGRES_PASSWORD=mysecretpassword
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
       - pg_data:/var/lib/postgresql/data/pgdata
     ports:
       - '5432:5432'
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready" ]
-      interval: 10s
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
+      interval: 5s
       timeout: 5s
       retries: 5
 
@@ -36,7 +38,7 @@ services:
   celery:
     build: .
     tty: true
-    command: celery -A config worker -l INFO
+    command: celery -A drf_project worker -l INFO
     depends_on:
       - redis
       - app
@@ -44,7 +46,7 @@ services:
   celery_beat:
     build: .
     tty: true
-    command: celery -A config beat -l INFO -S django
+    command: celery -A drf_project beat -l INFO -S django
     depends_on:
       - redis
       - app
