--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,7 +26,10 @@ services:
   app:
     build: .
     tty: true
-    command: python manage.py migrate && python manage.py runserver 0.0.0.0:8000
+    command: >
+      bash -c "python manage.py makemigrations
+      && python manage.py migrate
+      && python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8001:8000"
     volumes:
